baml_language/crates/baml_tests/snapshots/diagnostic_errors/parser_constructors/baml_tests__diagnostic_errors__parser_constructors__02_parser__array_constructor.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Point"
    L_BRACE "{"
    FIELD
      WORD "x"
      TYPE_EXPR "int"
        WORD "int"
    FIELD
      WORD "y"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "stringArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string[]"
      WORD "string"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL
          L_BRACKET "["
          STRING_LITERAL "hello"
            QUOTE """
            WORD "hello"
            QUOTE """
          COMMA ","
          STRING_LITERAL "world"
            QUOTE """
            WORD "world"
            QUOTE """
          COMMA ","
          STRING_LITERAL "test"
            QUOTE """
            KW_TEST "test"
            QUOTE """
          R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "intArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int[]"
      WORD "int"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL "[1, 2, 3]"
          L_BRACKET "["
          INTEGER_LITERAL "1"
          COMMA ","
          INTEGER_LITERAL "2"
          COMMA ","
          INTEGER_LITERAL "3"
          R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "floatArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "float[]"
      WORD "float"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL "[1.0, 2.0, 3.0]"
          L_BRACKET "["
          FLOAT_LITERAL "1.0"
          COMMA ","
          FLOAT_LITERAL "2.0"
          COMMA ","
          FLOAT_LITERAL "3.0"
          R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "boolArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "bool[]"
      WORD "bool"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL "[true, false, true]"
          L_BRACKET "["
          KW_TRUE "true"
          COMMA ","
          KW_FALSE "false"
          COMMA ","
          KW_TRUE "true"
          R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "pointArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Point[]"
      WORD "Point"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL
          L_BRACKET "["
          OBJECT_LITERAL
            WORD "Point"
            L_BRACE "{"
            OBJECT_FIELD "x: 1"
              WORD "x"
              COLON ":"
              INTEGER_LITERAL "1"
            COMMA ","
            OBJECT_FIELD "y: 2"
              WORD "y"
              COLON ":"
              INTEGER_LITERAL "2"
            R_BRACE "}"
          COMMA ","
          OBJECT_LITERAL
            WORD "Point"
            L_BRACE "{"
            OBJECT_FIELD "x: 3"
              WORD "x"
              COLON ":"
              INTEGER_LITERAL "3"
            COMMA ","
            OBJECT_FIELD "y: 4"
              WORD "y"
              COLON ":"
              INTEGER_LITERAL "4"
            R_BRACE "}"
          COMMA ","
          OBJECT_LITERAL
            WORD "Point"
            L_BRACE "{"
            OBJECT_FIELD "x: 5"
              WORD "x"
              COLON ":"
              INTEGER_LITERAL "5"
            COMMA ","
            OBJECT_FIELD "y: 6"
              WORD "y"
              COLON ":"
              INTEGER_LITERAL "6"
            R_BRACE "}"
          R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "mixedArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        TYPE_EXPR "int | string"
          WORD "int"
          PIPE "|"
          WORD "string"
      R_PAREN ")"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL
          L_BRACKET "["
          INTEGER_LITERAL "1"
          COMMA ","
          STRING_LITERAL "two"
            QUOTE """
            WORD "two"
            QUOTE """
          COMMA ","
          INTEGER_LITERAL "3"
          R_BRACKET "]"
        R_BRACE "}"

=== ERRORS ===
None
